make graphconfig final, refactor load and resolve