@@ -1,5 +1,7 @@
 package com.slack.astra.graphApi;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
@@ -12,8 +14,10 @@ import java.util.Map;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class GraphConfig {
+public final class GraphConfig {
   private static final Logger LOG = LoggerFactory.getLogger(GraphConfig.class);
+
+  public static final GraphConfig DEFAULT = new GraphConfig(Map.of());
 
   /**
    * Represents how a single logical field on a node should be mapped to span tags. Each field has:
@@ -25,33 +29,31 @@ public class GraphConfig {
    * == "http.request", then use the "tag.operation.canonical_path" override key to instead populate
    * a node's resource field.
    */
-  public static class TagConfig {
-    private String defaultKey;
-    private String defaultValue;
-    private List<RuleConfig> rules = Collections.emptyList();
+  public static final class TagConfig {
+    private final String defaultKey;
+    private final String defaultValue;
+    private final List<RuleConfig> rules;
+
+    @JsonCreator
+    public TagConfig(
+        @JsonProperty("default_key") String defaultKey,
+        @JsonProperty("default_value") String defaultValue,
+        @JsonProperty("rules") List<RuleConfig> rules) {
+      this.defaultKey = defaultKey;
+      this.defaultValue = defaultValue;
+      this.rules = (rules == null) ? Collections.emptyList() : List.copyOf(rules);
+    }
 
     public String getDefaultKey() {
       return defaultKey;
-    }
-
-    public void setDefaultKey(String defaultKey) {
-      this.defaultKey = defaultKey;
     }
 
     public String getDefaultValue() {
       return defaultValue;
     }
 
-    public void setDefaultValue(String defaultValue) {
-      this.defaultValue = defaultValue;
-    }
-
     public List<RuleConfig> getRules() {
       return rules;
-    }
-
-    public void setRules(List<RuleConfig> rules) {
-      this.rules = rules;
     }
   }
 
@@ -60,73 +62,81 @@ public class GraphConfig {
    * currently support multiple field matches under a single rule.
    */
   public static class RuleConfig {
-    private String field;
-    private String value;
-    private String overrideKey;
+    private final String field;
+    private final String value;
+    private final String overrideKey;
+
+    @JsonCreator
+    public RuleConfig(
+        @JsonProperty("field") String field,
+        @JsonProperty("value") String value,
+        @JsonProperty("override_key") String overrideKey) {
+      this.field = field;
+      this.value = value;
+      this.overrideKey = overrideKey;
+    }
 
     public String getField() {
       return field;
-    }
-
-    public void setField(String field) {
-      this.field = field;
     }
 
     public String getValue() {
       return value;
     }
 
-    public void setValue(String value) {
-      this.value = value;
-    }
-
     public String getOverrideKey() {
       return overrideKey;
-    }
-
-    public void setOverrideKey(String overrideKey) {
-      this.overrideKey = overrideKey;
     }
   }
 
   // Holds the entire mapping for logical field names to their configuration of defaults and rules.
-  private Map<String, TagConfig> nodeMetadataTagMapping;
+  private final Map<String, TagConfig> nodeMetadataTagMapping;
+
+  @JsonCreator
+  public GraphConfig(
+      @JsonProperty("node_metadata_tag_mapping") Map<String, TagConfig> nodeMetadataTagMapping) {
+    this.nodeMetadataTagMapping = Map.copyOf(nodeMetadataTagMapping);
+  }
 
   public Map<String, TagConfig> getNodeMetadataTagMapping() {
     return nodeMetadataTagMapping;
   }
 
-  public void setNodeMetadataTagMapping(Map<String, TagConfig> nodeMetadataTagMapping) {
-    this.nodeMetadataTagMapping = nodeMetadataTagMapping;
+  // Loads a GraphConfig from a YAML file on disk. On failure, log and return a null config.
+  public static GraphConfig load(Path filePath) throws IOException {
+    try {
+      String yaml = Files.readString(filePath);
+      return load(yaml);
+    } catch (Exception e) {
+      LOG.warn(
+          "Failed to read dependency graph config from file path. Returning default config", e);
+    }
+
+    return DEFAULT;
   }
 
-  // Loads a GraphConfig from a YAML file on disk. On failure, log and return a null config.
-  public static GraphConfig load(String configFile) throws IOException {
-    if (!configFile.isEmpty()) {
+  public static GraphConfig load(String configYAML) throws IOException {
+    if (!configYAML.isEmpty()) {
       try {
-        Path path = Path.of(configFile);
-        String yaml = Files.readString(path);
-
         ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
         mapper.setPropertyNamingStrategy(PropertyNamingStrategies.SNAKE_CASE);
-        return mapper.readValue(yaml, GraphConfig.class);
+        return mapper.readValue(configYAML, GraphConfig.class);
       } catch (Exception e) {
-        LOG.warn("Failed to read or parse dependency graph config file. Returning null config", e);
-        return null;
+        LOG.warn(
+            "Failed to parse dependency graph config file contents. Returning default config", e);
       }
     }
 
-    return null;
+    return DEFAULT;
   }
 
   /**
    * Resolves the actual tag value for a given logical field, using the provided span tags. Steps:
    * 1. Look up the TagConfig for this logical field (e.g. "resource"). 2. Default to using its
-   * defaultKey + defaultValue. 3. If rules are defined: - Iterate through each rule in order. - If
-   * a rule’s field/value condition matches, switch keyToUse to overrideKey. - Continue processing
-   * later rules (last matching rule wins). 4. Finally, look up the chosen key in tags. If missing,
-   * fall back to defaultValue. Note: This logic does not currently support multiple field matches
-   * for a single rule.
+   * defaultKey + defaultValue. 3. If rules are defined: - Iterate through each rule in reverse
+   * order. - If a rule’s field/value condition matches, switch keyToUse to overrideKey. 4. Finally,
+   * look up the chosen key in tags. If missing, fall back to defaultValue. Note: This logic does
+   * not currently support multiple field matches for a single rule.
    */
   public String resolve(Map<String, String> tags, String logicalField) {
     TagConfig baseCfg = nodeMetadataTagMapping.get(logicalField);
@@ -136,23 +146,19 @@ public class GraphConfig {
       return tags.getOrDefault(logicalField, "unknown_" + logicalField);
     }
 
-    // Start with the default key + value.
-    String keyToUse = baseCfg.getDefaultKey();
-    String defaultValue = baseCfg.getDefaultValue();
+    // Later rules override earlier ones, so start from the back of the list and use the first one
+    // that matches.
+    String keyToUse =
+        baseCfg.getRules().reversed().stream()
+            .filter(
+                rule ->
+                    rule.getValue()
+                        .equals(tags.getOrDefault(rule.getField(), "unknown_" + rule.getField())))
+            .map(RuleConfig::getOverrideKey)
+            .filter(tags::containsKey)
+            .findFirst()
+            .orElse(baseCfg.getDefaultKey());
 
-    // Apply rules in order. Later matching rules override earlier ones.
-    for (RuleConfig rule : baseCfg.getRules()) {
-      // Get the value of the field defined in the rule.
-      String matchVal = tags.getOrDefault(rule.getField(), "unknown_" + rule.getField());
-      // If the rule value matches, override which key to use for resolution of the logical field
-      // only if it exists in tags, otherwise keep the default.
-      if (rule.getValue().equals(matchVal)) {
-        if (tags.containsKey(rule.getOverrideKey())) {
-          keyToUse = rule.getOverrideKey();
-        }
-      }
-    }
-
-    return tags.getOrDefault(keyToUse, defaultValue);
+    return tags.getOrDefault(keyToUse, baseCfg.getDefaultValue());
   }
 }
